# laborator-pilot

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  clean.sh  complex.cpp  complex.hpp  test.bat  test.sh
src/: complex.cpp  complex.hpp
tests/: CMakeLists.txt  minus.cpp  multipy.cpp  plus.cpp  read.cpp  test  test_minus.cpp  test_plus.cpp  write.cpp
